[package]
name = "particle_transport"
default-run = "particle_transport_bin"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "particle_transport_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.18.0"
num = "0.4.0"
instant = { version = "0.1.12", features = [ "stdweb", "wasm-bindgen", "inaccurate" ] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
fastrand = "1.7.0"
num_cpus = "1.13.1"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
nanorand = { version = "0.7.0", features = [ "wyrand", "getrandom" ] }

[dev-dependencies]
gnuplot = "0.0.37"
criterion = "0.3"

[profile.release]
codegen-units = 1
